sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:3: error: not found: value i
  while (i<getValueCount-1){
         ^AlgGnomeSort:4: error: not found: value i
    if (i==0){
        ^AlgGnomeSort:5: error: not found: value i
      swap(i,i+1)
           ^AlgGnomeSort:5: error: not found: value i
      swap(i,i+1)
             ^AlgGnomeSort:7: error: not found: value i
    if (i==getValueCount){
        ^AlgGnomeSort:10: error: not found: value i
    if (isSmaller(i+1,i+2)==true){
                  ^AlgGnomeSort:10: error: not found: value i
    if (isSmaller(i+1,i+2)==true){
                      ^AlgGnomeSort:11: error: not found: value i
      swap(i,i+1)
           ^AlgGnomeSort:11: error: not found: value i
      swap(i,i+1)
             ^AlgGnomeSort:14: error: not found: value i
      swap(i+1,i+2)
           ^AlgGnomeSort:14: error: not found: value i
      swap(i+1,i+2)
               ^AlgGnomeSort:15: error: not found: value i
      swap(i,i-1)
           ^AlgGnomeSort:15: error: not found: value i
      swap(i,i-1)
             ^